--- a/package.json
+++ b/package.json
@@ -14,10 +14,16 @@
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
     "aos": "2.3.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.555.0",
+    "motion": "^12.23.25",
     "next": "15.1.6",
+    "nodemailer": "^7.0.11",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "swiper": "^8.4.7",
+    "tailwind-merge": "^3.4.0",
     "typescript": "^5.7.3"
   },
   "devDependencies": {
@@ -25,6 +31,7 @@
     "@tailwindcss/postcss": "^4.0.3",
     "@types/aos": "^3.0.7",
     "postcss": "^8.5.1",
-    "tailwindcss": "^4.0.3"
+    "tailwindcss": "^4.0.3",
+    "tw-animate-css": "^1.4.0"
   }
 }
