--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ SMTP_PORT=587
 SMTP_SECURE=false
 SMTP_REQUIRE_TLS=true
 SMTP_USER=info@migrateya.com
-SMTP_PASS=tu_contraseña
+SMTP_PASS=Migrateya2026%-%
 SMTP_FROM="MIGRATE <info@migrateya.com>"
