--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ SMTP_REQUIRE_TLS=true
 SMTP_USER=info@migrateya.com
 SMTP_PASS=Migrateya2026%-%
 SMTP_FROM="MIGRATE <info@migrateya.com>"
+MS_TENANT_ID=e7dcc8fe-e0b6-4f39-abed-4df163a0a478
+MS_CLIENT_ID=4b2c2a8e-8164-4263-9396-007fbe53e6c3
+MS_CLIENT_SECRET=Qz98Q~XiXeMQ1fQvggbq2VCMk58xIUVaV3Z6xahD
+MS_SENDER_UPN=info@migrateya.com
