--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemailer": "^7.0.11",
     "react": "19.0.1",
     "react-dom": "19.0.1",
+    "resend": "^4.0.0",
     "swiper": "^8.4.7",
     "tailwind-merge": "^3.4.0",
     "typescript": "^5.7.3"
